[gd_scene load_steps=11 format=2]

[ext_resource path="res://Sprites/Babaa.png" type="Texture" id=1]
[ext_resource path="res://Sprites/Selector.png" type="Texture" id=2]
[ext_resource path="res://Sprites/Machirp.png" type="Texture" id=3]
[ext_resource path="res://Sprites/Eggin.png" type="Texture" id=4]
[ext_resource path="res://Sprites/Stelluxe.png" type="Texture" id=5]
[ext_resource path="res://Sprites/Sapack.png" type="Texture" id=6]
[ext_resource path="res://Scripts/BattlerSelect.gd" type="Script" id=7]
[ext_resource path="res://Fonts/Finkwell.tres" type="DynamicFont" id=8]
[ext_resource path="res://Sprites/Honbat.png" type="Texture" id=9]
[ext_resource path="res://Sprites/Dustbunny.png" type="Texture" id=10]

[node name="BattlerSelect" type="Node2D"]
script = ExtResource( 7 )

[node name="ColorRect" type="ColorRect" parent="."]
margin_left = 320.0
margin_right = 1600.0
margin_bottom = 1024.0
color = Color( 0.168627, 0.156863, 0.196078, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Babaa" type="Sprite" parent="."]
position = Vector2( 448, 128 )
texture = ExtResource( 1 )

[node name="Stelluxe" type="Sprite" parent="."]
position = Vector2( 704, 128 )
texture = ExtResource( 5 )

[node name="Sapack" type="Sprite" parent="."]
position = Vector2( 960, 128 )
texture = ExtResource( 6 )

[node name="Eggin" type="Sprite" parent="."]
position = Vector2( 1214, 128 )
texture = ExtResource( 4 )

[node name="Machirp" type="Sprite" parent="."]
position = Vector2( 1472, 128 )
texture = ExtResource( 3 )

[node name="Selector" type="Position2D" parent="."]
position = Vector2( 448, 128 )

[node name="Sprite" type="Sprite" parent="Selector"]
texture = ExtResource( 2 )

[node name="Team1" type="Label" parent="."]
margin_top = 3.05176e-05
margin_right = 213.0
margin_bottom = 85.0
rect_min_size = Vector2( 1, 1 )
rect_scale = Vector2( 1.5, 1.5 )
custom_fonts/font = ExtResource( 8 )
text = "Team 1"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Battler1" type="Label" parent="Team1"]
margin_left = 85.3333
margin_top = 85.3333
margin_right = 256.333
margin_bottom = 198.333
rect_min_size = Vector2( 1, 1 )
rect_scale = Vector2( 0.75, 0.75 )
custom_fonts/font = ExtResource( 8 )
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Battler2" type="Label" parent="Team1"]
margin_left = 85.3333
margin_top = 170.667
margin_right = 256.333
margin_bottom = 283.667
rect_min_size = Vector2( 1, 1 )
rect_scale = Vector2( 0.75, 0.75 )
custom_fonts/font = ExtResource( 8 )
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Battler3" type="Label" parent="Team1"]
margin_left = 85.3333
margin_top = 256.0
margin_right = 256.333
margin_bottom = 369.0
rect_min_size = Vector2( 1, 1 )
rect_scale = Vector2( 0.75, 0.75 )
custom_fonts/font = ExtResource( 8 )
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Team2" type="Label" parent="."]
margin_left = 1600.0
margin_top = 3.05176e-05
margin_right = 1813.0
margin_bottom = 85.0
rect_min_size = Vector2( 1, 1 )
rect_scale = Vector2( 1.5, 1.5 )
custom_fonts/font = ExtResource( 8 )
text = "Team 2"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Battler1" type="Label" parent="Team2"]
margin_top = 85.0
margin_right = 171.0
margin_bottom = 198.0
rect_min_size = Vector2( 0.75, 0.75 )
rect_scale = Vector2( 0.75, 0.75 )
custom_fonts/font = ExtResource( 8 )
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Battler2" type="Label" parent="Team2"]
margin_left = -0.00012207
margin_top = 170.667
margin_right = 171.0
margin_bottom = 283.667
rect_min_size = Vector2( 0.75, 0.75 )
rect_scale = Vector2( 0.75, 0.75 )
custom_fonts/font = ExtResource( 8 )
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Battler3" type="Label" parent="Team2"]
margin_top = 255.333
margin_right = 171.0
margin_bottom = 368.333
rect_min_size = Vector2( 0.75, 0.75 )
rect_scale = Vector2( 0.75, 0.75 )
custom_fonts/font = ExtResource( 8 )
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ChosenBattlers" type="Node2D" parent="."]

[node name="Honbat" type="Sprite" parent="."]
position = Vector2( 448, 384 )
texture = ExtResource( 9 )

[node name="Dustbunny" type="Sprite" parent="."]
position = Vector2( 704, 384 )
texture = ExtResource( 10 )
